--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==26.4.0
 requests==2.32.3
+seaborn==0.13.2
 shapely==2.0.7
 six==1.17.0
 stack-data==0.6.3
